src/test/resources/tests/typeError/returnWithoutValueWhenExpected.qg
init true

run true

input(a,b) true

fun thisNeverReturns(): number {
    return
}